# sunaba

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  MULTIPLAYER_MIGRATION.md  PLAN.md  POWDER_PLAN.md  README.md  WORLDGEN_PLAN.md  bacon.toml  build-web.bat  build-web.sh  config.example.ron  justfile
.claude/agents/: code-reviewer.md
.claude/skills/research/: SKILL.md
.github/actions/generate-spacetimedb-client/: action.yml
.github/workflows/: ci.yml  pages.yml
crates/sunaba/: Cargo.toml
crates/sunaba-core/: Cargo.toml
crates/sunaba-core/src/: lib.rs
crates/sunaba-core/src/entity/: input.rs  mod.rs  player.rs  tools.rs
crates/sunaba-core/src/levels/: demo_levels.rs
crates/sunaba-core/src/simulation/: knockback.rs  light.rs  mining.rs  mod.rs  state_changes.rs  structural.rs  temporary_light_manager.rs
crates/sunaba-core/src/world/: biome.rs  biome_transition.rs  biome_zones.rs  ca_update.rs  chemistry_system.rs  chunk.rs  chunk_manager.rs  chunk_status.rs  context_scanner.rs  debris_system.rs  features.rs  generation.rs  light_system.rs  mining_system.rs  mod.rs  neighbor_queries.rs  persistence.rs  persistence_system.rs  pixel_queries.rs  player_physics.rs  pressure_system.rs  raycasting.rs  rng_trait.rs  stats.rs  structure_placement.rs  world.rs  worldgen_config.rs
crates/sunaba-core/tests/: creature_integration_tests.rs
crates/sunaba-creature/: Cargo.toml
crates/sunaba-creature/src/: behavior.rs  creature.rs  critter.rs  execution_state.rs  genome.rs  lib.rs  morphology.rs  neural.rs  physics.rs  sensors.rs  simple_physics.rs  spawning.rs  traits.rs  types.rs  viability.rs  world_interaction.rs
crates/sunaba-powder/: Cargo.toml
crates/sunaba-powder/assets/shaders/: powder.wgsl
crates/sunaba-powder/src/: app.rs  config.rs  lib.rs  main.rs
crates/sunaba-powder/src/render/: mod.rs  renderer.rs  visualization.rs
crates/sunaba-powder/src/tools/: drag.rs  erase.rs  mod.rs  pen.rs  wind.rs
crates/sunaba-powder/src/ui/: hud.rs  mod.rs  toolbar.rs
crates/sunaba-server/: Cargo.toml
crates/sunaba-server/src/: helpers.rs  lib.rs  tables.rs
crates/sunaba-server/src/reducers/: admin.rs  lifecycle.rs  mod.rs  monitoring.rs  player_actions.rs  testing.rs  world_ticks.rs
crates/sunaba-simulation/: Cargo.toml
crates/sunaba-simulation/src/: lib.rs  materials.rs  pixel.rs  reactions.rs
crates/sunaba/assets/shaders/: shader.wgsl
crates/sunaba/src/: app.rs  config.rs  hot_reload.rs  lib.rs  main.rs  screenshot.rs
crates/sunaba/src/animation/: camera.rs  mod.rs  tweens.rs
crates/sunaba/src/assets/: embedded.rs  mod.rs  native.rs
crates/sunaba/src/headless/: curriculum.rs  env_distribution.rs  fitness.rs  map_elites.rs  mod.rs  multi_env_eval.rs  pixel_renderer.rs  report.rs  scenario.rs  terrain_config.rs  training_env.rs
crates/sunaba/src/multiplayer/: .gitignore  chunk_loader.rs  client.rs  js_client.rs  manager.rs  metrics.rs  mod.rs  oauth_native.rs
crates/sunaba/src/render/: particles.rs  renderer.rs
crates/sunaba/src/scenario/: definition.rs  executor.rs  results.rs  verification.rs
crates/sunaba/src/screenshot/: layouts.rs  mod.rs  offscreen_renderer.rs  sample_data.rs  scenario.rs  video_capture.rs  video_scenarios.rs  world_shader.wgsl
crates/sunaba/src/ui/: controls_help.rs  crafting_ui.rs  debug_panel.rs  dock.rs  escape_menu.rs  game_over_panel.rs  hud.rs  inventory_ui.rs  logger_panel.rs  mod.rs  multiplayer_panel.rs  multiplayer_stats.rs  params_panel.rs  tooltip.rs  ui_state.rs
crates/sunaba/src/ui/theme/: colors.rs  fonts.rs  mod.rs  sizing.rs
crates/sunaba/src/ui/worldgen_editor/: mod.rs  noise_widget.rs  preview.rs
deployment/: DEPLOYMENT.md  spacetimedb.service
docs/: architecture.md  emergent-physics.md  index.md
experiments/: PROGRESS.md
experiments/templates/: code-change.md  investigation.md  iteration.md  training-run.md
src/: app.rs  lib.rs  main.rs
src/creature/: behavior.rs  creature.rs  genome.rs  mod.rs  morphology.rs  neural.rs  sensors.rs  spawning.rs  world_interaction.rs
src/entity/: health.rs  inventory.rs  mod.rs  player.rs
src/headless/: fitness.rs  gif_capture.rs  map_elites.rs  mod.rs  pixel_renderer.rs  report.rs  scenario.rs  training_env.rs
src/levels/: demo_levels.rs  level_def.rs
src/physics/: rigid_body.rs
src/render/: mod.rs  renderer.rs  shader.wgsl  sprite.rs
src/simulation/: light.rs  mod.rs  reactions.rs  structural.rs  temperature.rs
src/ui/: controls_help.rs  hud.rs  inventory_ui.rs  mod.rs  stats.rs  tooltip.rs  ui_state.rs
src/world/: chunk.rs  generation.rs  mod.rs  persistence.rs  world.rs
web/: index.html
web/js/: oauth.js  spacetime_bridge.js
