[package]
name = "sunaba"
version = "0.1.0"
edition = "2021"
resolver = "2"
authors = ["Artur Hallmann <arturh@arturh.de>"]
description = "A 2D falling-sand physics sandbox survival game"
license = "MIT"
repository = "https://github.com/arturh85/sunaba"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "sunaba"
path = "src/main.rs"
required-features = ["native"]

[dependencies]
# Graphics
wgpu = "27.0"
winit = "0.30"
bytemuck = { version = "1.14", features = ["derive"] }

# UI
egui = "0.33"
egui-wgpu = "0.33"
# egui-winit is configured per-target below (clipboard feature doesn't work on WASM)

# Physics (rigid bodies)
rapier2d = "0.18"

# Math
glam = { version = "0.25", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
ron = "0.8"
serde-big-array = "0.5"

# Random number generation
rand = "0.8"
rand_xoshiro = "0.7"  # Fast, seedable RNG

# Logging
log = "0.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
bitflags = "2.4"
pollster = "0.3"  # Simple async executor for wgpu init

# Noise generation for procedural terrain
noise = "0.9"

# Time handling (cross-platform, WASM-compatible)
instant = { version = "0.1", features = ["wasm-bindgen"] }

# ML and Neural Networks (for creature AI)
burn = { version = "0.18", features = ["std", "ndarray"] }
burn-ndarray = "0.18"

# Graph processing (for GNN and CPPN)
petgraph = "0.6"

# Fast hashing (for NEAT innovation tracking)
ahash = "0.8"

[features]
default = ["native"]
native = []

# Platform-specific dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
clap = { version = "4.4", features = ["derive"] }
rayon = "1.8"
lz4_flex = "0.11"
chrono = "0.4"
egui-winit = { version = "0.33", features = ["clipboard"] }

# Additional WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlCanvasElement"] }
console_error_panic_hook = "0.1"
console_log = "1.0"
# Enable WASM support for both getrandom versions (0.2 and 0.3)
# Using package renames to specify both versions
getrandom_v02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom_v03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
egui-winit = { version = "0.33", default-features = false }

[dev-dependencies]
criterion = "0.8"  # Benchmarking

[profile.dev]
opt-level = 1  # Some optimization even in debug for playable simulation

[profile.dev.package."*"]
opt-level = 3  # Full optimization for dependencies

[profile.release]
lto = "thin"
codegen-units = 1

# WASM-specific optimizations
[profile.release.package."*"]
opt-level = 3

# [[bench]]
# name = "simulation"
# harness = false
