[workspace]
members = [
    "crates/sunaba-simulation",
    "crates/sunaba-creature",
    "crates/sunaba-core",
    "crates/sunaba",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Artur Hallmann <arturh@arturh.de>"]
license = "MIT"
repository = "https://github.com/arturh85/sunaba"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1

[profile.release.package."*"]
opt-level = 3
