[package]
name = "sunaba-core"
version.workspace = true
edition.workspace = true

[dependencies]
sunaba-simulation = { path = "../sunaba-simulation" }
sunaba-creature = { path = "../sunaba-creature" }
ahash = "0.8"
anyhow = "1.0"
bincode-next = { version = "2.0", features = ["serde"] }
bitflags = "2.4"
glam = { version = "0.25", features = ["serde"] }
instant = { version = "0.1", features = ["wasm-bindgen"] }
log = "0.4"
noise = "0.9"
petgraph = "0.6"
rand = "0.9"
rand_xoshiro = "0.7"
rapier2d = "0.18"
ron = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.5"
thiserror = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = "0.4"
lz4_flex = "0.11"
