[package]
name = "sunaba-creature"
version.workspace = true
edition.workspace = true
description = "ML-evolved creatures for Sunaba"

[dependencies]
sunaba-simulation = { path = "../sunaba-simulation" }
ahash = { version = "0.8", default-features = false, features = ["compile-time-rng", "std"] }
bresenham = "0.1"
glam = { version = "0.25", features = ["serde"] }
log = "0.4"
ndarray = { version = "0.16", features = ["serde"] }
ndarray-linalg = { version = "0.17", optional = true }
petgraph = { version = "0.6", features = ["serde-1"] }
serde = { version = "1.0", features = ["derive"] }

[dependencies.rand]
version = "0.8"
optional = true

[dependencies.rand_xoshiro]
version = "0.6"
optional = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
puffin = { git = "https://github.com/blip-radar/puffin.git", branch = "egui-0.33", optional = true }

[features]
default = ["evolution"]
evolution = ["rand", "rand_xoshiro"]
profiling = ["puffin"]

[dev-dependencies]
bincode-next = { version = "2.0", features = ["serde"] }
