[package]
name = "sunaba-server"
version.workspace = true
edition.workspace = true
description = "SpacetimeDB multiplayer server module for Sunaba"

[lib]
crate-type = ["cdylib"]

[dependencies]
# SpacetimeDB
spacetimedb = "1.11.1"

# Sunaba crates (WASM-compatible)
sunaba-simulation = { path = "../sunaba-simulation" }
sunaba-creature = { path = "../sunaba-creature", default-features = false }
sunaba-core = { path = "../sunaba-core", default-features = false }

# Serialization
bincode-next = { version = "2.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Math
glam = { version = "0.25", features = ["serde"] }

# Logging
log = "0.4"

# Utilities
once_cell = "1.19"
anyhow = "1.0"
