[package]
name = "sunaba"
version.workspace = true
edition.workspace = true
description = "A 2D falling-sand physics sandbox survival game"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "sunaba"
path = "src/main.rs"
required-features = ["native"]

[features]
default = ["native", "profiling"]
native = []
headless = []
multiplayer_native = ["spacetimedb-sdk"]  # Rust SDK for native builds
multiplayer_wasm = []                      # TypeScript SDK via JS for WASM builds
profiling = ["puffin", "puffin_egui", "sunaba-core/profiling"]

[dependencies]
sunaba-core = { path = "../sunaba-core" }

# Graphics
wgpu = "27.0"
winit = "0.30"
bytemuck = { version = "1.14", features = ["derive"] }

# UI
egui = "0.33"
egui-wgpu = "0.33"
egui_dock = "0.18"
egui-notify = "0.21"

# Math
glam = { version = "0.25", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
ron = "0.12"

# Animation
keyframe = "1.1"

# Other
anyhow = "1.0"
bitflags = "2.4"
image = { version = "0.25", default-features = false, features = ["png"] }
instant = { version = "0.1", features = ["wasm-bindgen"] }
log = "0.4"
pollster = "0.3"
rand = "0.8"
rand_xoshiro = "0.6"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
assets_manager = { version = "0.13", features = ["png", "hot-reloading"] }
bincode-next = { version = "2.0", features = ["serde"] }
env_logger = "0.11"
clap = { version = "4.4", features = ["derive"] }
config = { version = "0.15", default-features = false, features = ["ron"] }
rayon = "1.8"
chrono = "0.4"
egui-winit = { version = "0.33", features = ["clipboard"] }
egui_logger = "0.9"
gif = "0.13"
indicatif = "0.17"
puffin = { git = "https://github.com/blip-radar/puffin.git", branch = "egui-0.33", optional = true }
puffin_egui = { git = "https://github.com/blip-radar/puffin.git", branch = "egui-0.33", optional = true }
spacetimedb-sdk = { version = "1.0", optional = true }  # Rust SDK for native multiplayer

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"  # JavaScript interop for TypeScript SDK
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlCanvasElement"] }
console_error_panic_hook = "0.1"
console_log = "1.0"
getrandom_v02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom_v03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
egui-winit = { version = "0.33", default-features = false }

[dev-dependencies]
criterion = "0.8"
